--- a/style.css
+++ b/style.css
@@ -3,21 +3,34 @@ body{
     margin: 0%;
 }
 
-#painel {
+.painel {
     background-color: #000010;
     display: flex;
     justify-content:center;
-    align-items: center;
-    padding: 10px;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
-.quadro {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    height: 480px;
+.titulo {
+    padding-top: 5vw;
+    background-color: #000010;
+    color: white;
+    display: block;
+    height: 10vh;
     width: 50%;
-    background-color: aliceblue;
+    text-align: center;
+}
+
+.texto {
+    
+    padding-right: 5vw;
+    padding-left: 5vw;
+    text-align: justify;
+}
+
+.espaco {
+    padding-top: 20px;
 }
 
 .foto {
