--- a/style.css
+++ b/style.css
@@ -1,17 +1,50 @@
 body{
     padding: 0%;
     margin: 0%;
+    background-image: url(imgext.jpg);
+    background-repeat: no-repeat;
+    background-position: top;
+    overflow-x:hidden;
 }
-
+.cabecalho{
+    position: fixed;
+}
+.navbar{
+    background-color: #161139;
+    position: fixed;
+    width: 100vw;
+    border-bottom: solid 1px #fff;
+    
+}
+.nav-link:hover{
+    color: white;
+    text-shadow: 0 0 5px rgba(255, 255, 255);
+    
+}
+.container {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    height: 100vh; 
+}
+.Introducao{
+    color: white;
+    width: 50vw; 
+    border: solid 1px white;
+    padding: 5%;
+    border-radius:15px;
+    font-size: 100%;
+    background-color: rgba(22, 17, 57, 0.6);
+}
+.Introducao h1{ 
+    margin-bottom: 15%;
+    font-size:2vw ;
+}
 .painel {
     background-color: #000010;
     display: flex;
-    justify-content:center;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
+    justify-content: center;   
 }
-
 .titulo {
     padding-top: 5vw;
     background-color: #000010;
@@ -21,24 +54,38 @@ body{
     width: 50%;
     text-align: center;
 }
-
 .texto {
-    
     padding-right: 5vw;
     padding-left: 5vw;
     text-align: justify;
+    font-size: 2vh;
+    margin-top: 8vh;
+    
 }
-
 .espaco {
     padding-top: 20px;
 }
-
 .foto {
-    width: 50%;
+    width:50%;
     display: inline-flex;
+    
 }
-
 .foto img {
     width: 100%;
     height: 480px;
+}
+.title{
+    font-size: 3vh;
+}
+.containterPainel{
+    border-top: solid 1px #fff;
+    padding: 0px;
+    height: 100vh;
+}
+footer {
+    text-align: center;
+    padding: 20px;
+    border-top: 1px solid #e1e1e1;
+    background-color: #161139;
+    color: #fff;
 }
